WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290952
Fix up autofocus candidate appending steps
https://bugs.webkit.org/show_bug.cgi?id=290952
Summary
Fix up autofocus candidate appending steps
Brady Eidson
Reported
2025-04-02 15:01:04 PDT
Fix up autofocus candidate appending steps
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-02 15:01:17 PDT
<
rdar://problem/148464871
>
Brady Eidson
Comment 2
2025-04-02 15:06:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43490
EWS
Comment 3
2025-04-02 23:59:34 PDT
Committed
293147@main
(c797e4235b02): <
https://commits.webkit.org/293147@main
> Reviewed commits have been landed. Closing PR #43490 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug