Fix up autofocus candidate appending steps rdar://148464871 https://bugs.webkit.org/show_bug.cgi?id=290952

Reviewed by Alex Christensen.

Before this change we only compared the Element's origin to the top origin before adding it to the autofocus candidate list.
According to the insertion steps from https://html.spec.whatwg.org/multipage/interaction.html#the-autofocus-attribute,
Elements should not be appended to the autofocus candidate list unless every navigable ancestor is of the same origin.

e.g. We need to walk the whole frame tree to the parent.

Also clean up some site isolation related code/error messages that don't actually apply *because* we have this same
origin - and therefore same process - guarantee.

This site isolation cleanup also happened to progress a WPT test for all configurations.

* LayoutTests/imported/w3c/web-platform-tests/html/interaction/focus/the-autofocus-attribute/same-origin-autofocus-expected.txt:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::flushAutofocusCandidates):
* Source/WebCore/dom/Element.cpp:
(WebCore::shouldAutofocus):
(WebCore::Element::insertedIntoAncestor):

Canonical link: https://commits.webkit.org/293147@main